feat: :sparkles: create files
create lies and desing

by @michelrodriguez

--- a/html/quienes_somos.html
+++ b/html/quienes_somos.html
@@ -19,6 +19,33 @@
         <a href="">¿Quienes somos?</a>/
         <a href="">contacto</a>
     </nav>
+    <section>
+        <nav>
+            <img src="/img/mision.png" alt="logo mision">
+            <h3>misión</h3>
+            <p>potenciar el éxito de las compañiasmediante
+                soluciones tecnológicas innovadoras que 
+                trasforman ideas en impacto, impulsando el 
+                creciomiento acelerado de estas. 
+            </p>
+        </nav>
+    </section>
+
+
+    <section>
+        <nav>
+            <img src="/img/vision.png" alt="logo visión">
+            <h3>visión</h3>
+            <p>Nos vemos como lideres en la vanguardia de la 
+                innovación tecnologica, siendo reconocidos por 
+                nuestra dedicacion a impulsar el éxito empresarial
+                y el cambio social. Aspiramos a ser la primera 
+                opcion para compañias que buscan soluciones 
+                tecnologias de alto impacto, demostrando que la tecnologia 
+                puede ser una fuerza poderosa para el bien.
+            </p>
+        </nav>
+    </section>
 
     
 </body>
