feat: :sparkles: arrangement
structural arrangement and adding style and design

by @michelrubio

--- a/html/quienes_somos.html
+++ b/html/quienes_somos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes somos?</title>
-    <link rel="stylesheet" href="/estilo.css">
+    <link rel="stylesheet" href="../estilo.css">
 </head>
 <body>
     <header>
@@ -13,28 +13,28 @@
         </div>
 
     </header>
-    <nav >
+    <nav class="opcion">
         <a href="">inicio</a> /
         <a href="">Servicios</a> / 
         <a href="">¿Quienes somos?</a>/
         <a href="">contacto</a>
     </nav>
     <section>
-        <nav>
-            <img src="/img/mision.png" alt="logo mision">
+        <div>
+            <img src="../img/mision.png" alt="logo mision">
             <h3>misión</h3>
             <p>potenciar el éxito de las compañiasmediante
                 soluciones tecnológicas innovadoras que 
                 trasforman ideas en impacto, impulsando el 
                 creciomiento acelerado de estas. 
             </p>
-        </nav>
+        </div>
     </section>
 
 
     <section>
-        <nav>
-            <img src="/img/vision.png" alt="logo visión">
+        <div>
+            <img src="../img/vision.png" alt="logo visión">
             <h3>visión</h3>
             <p>Nos vemos como lideres en la vanguardia de la 
                 innovación tecnologica, siendo reconocidos por 
@@ -44,7 +44,7 @@
                 tecnologias de alto impacto, demostrando que la tecnologia 
                 puede ser una fuerza poderosa para el bien.
             </p>
-        </nav>
+        </div>
     </section>
 
     
