--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         </div>
 
     </header>
-    <nav >
+    <nav class="acciones">
         <a href="">inicio</a><hr>
         <a href="">Servicios</a> <hr> 
         <a href="">¿Quienes somos?</a><hr>
         <a href="">contacto</a>
     </nav> 
     <main>
-        <img src="img/imagen.inicio.png" alt="portada">
+        <img src="./img/imagen.inicio.png" alt="portada" class="imagen-inicio">
         <div>
-            <h2>Conectando el mundo con las mejores tecnologias 
-                para impactar compañias vanguardistas</h2>
+            <h3>Conectando el mundo con las mejores tecnologias 
+                para impactar compañias vanguardistas</h3>
         </div>
     </main>
 
