--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto</title>
-    <link rel="stylesheet" href="/estilo.css">
+    <link rel="stylesheet" href="../estilo.css">
 </head>
 <body>
     <header>
@@ -20,24 +20,24 @@
         <a href="">contacto</a>
     </nav>
     <section>
-        <img src="/img/mapa-contacto.png" alt="mapa">
+        <img src="../img/mapa-contacto.png" alt="mapa">
     </section>
     <section class="logos">
         <div class="titulo-contacto">
         <h3> Donde encontrarnos: </h3></div>
         <div class="contacto">
           <p>
-            <img src="/img/casa.png" alt="logo casa" class="icono"> 712 Av.Green strone Sprintfield
+            <img src="../img/casa.png" alt="logo casa" class="icono"> 712 Av.Green strone Sprintfield
           </p>
           <p>
-            <img src="/img/correo.png" alt="logo correo " class="icono"> info@acme.tech
+            <img src="../img/correo.png" alt="logo correo " class="icono"> info@acme.tech
           </p>
           <p>
-            <img src="/img/llamar.png" alt="logo telefono" class="icono"> (+001) 555 8965
+            <img src="../img/llamar.png" alt="logo telefono" class="icono"> (+001) 555 8965
             <strong>Ubicación:</strong> Bucaramanga, Colombia
           </p>
           <p>
-            <img src="/img/instagram.png" alt="logo instagram" class="icono"> @acmetech
+            <img src="../img/instagram.png" alt="logo instagram" class="icono"> @acmetech
             
           </p>
         </div>
