--- a/html/servicios.html
+++ b/html/servicios.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
     <link rel="stylesheet" href="../estilo.css">
 </head>
+
 <body>
     <header>
         <div>
@@ -13,49 +15,65 @@
         </div>
 
     </header>
-    <nav >
-        <a href="">inicio</a> /
-        <a href="">Servicios</a> / 
-        <a href="">¿Quienes somos?</a>/
+    <nav>
+        <a href="">inicio</a>
+        <hr>
+        <a href="">Servicios</a>
+        <hr>
+        <a href="">¿Quienes somos?</a>
+        <hr>
         <a href="">contacto</a>
-    </nav> 
+    </nav>
     <main>
-        <section class="ia-gen">
-            <nav>
-                <img src="/img/ia-generativa.png" alt="ia-generativa">
-                <p>Utiliza el poder de la IA generativa para crear
-                    contenido digital de alta calidad que ayude a impulsar
-                    tu compañia a traves del marketing digital.
-                </p>
+        <section>
+            <div class="cuadro">
+                <div class="info">
+                    <img src="../img/ia-generativa.png" alt="ia-generativa">
+                    <h3>IA generativa</h3>
+                    <p>Utiliza el poder de la IA generativa para crear
+                        contenido digital de alta calidad que ayude a impulsar
+                        tu compañia a traves del marketing digital.
+                    </p>
+                </div>
 
-            </nav>
+            </div>
         </section>
 
         <section>
-            <nav>
-                <img src="/img/ciencia-datos.png" alt="ciencia-datos">
-                <p>Los datos generados en tu compañia te ayudaran a ver de una forma 
-                    mas clara que pasos seguir. la ciencia de datos te ayudará a la toma
-                    de decisiones mediante proyecciones y otras herramientas.
-                </p>
-            </nav>
+            <div class="cuadro">
+                <div class="info">
+                    <img src="../img/ciencia-datos.png" alt="ciencia-datos">
+                    <h3>ciencia de datos</h3>
+                    <p>Los datos generados en tu compañia te ayudaran a ver de una forma
+                        mas clara que pasos seguir. la ciencia de datos te ayudará a la toma
+                        de decisiones mediante proyecciones y otras herramientas.
+                    </p>
+                </div>
+
+            </div>
         </section>
+
 
         <section>
-            <nav>
-                <img src="/img/software_como_servicio.png" alt="software_como_servicio">
-                <p>poseemos una gran variedad de herramientas digitales 
-                    que le ayudaran a gestionar su compañia.
-                    apoyamos sus procesos con nuestras plataformas digitales.
+            <div class="cuadro">
+                <div class="info">
+                    <img src="../img/software_como_servicio.png" alt="software_como_servicio">
+                    <h3>Software como servicio</h3>
+                    <p>poseemos una gran variedad de herramientas digitales
+                        que le ayudaran a gestionar su compañia.
+                        apoyamos sus procesos con nuestras plataformas digitales.
+                    </p>
+                </div>
 
-                </p>
-            </nav>
+            </div>
         </section>
+    </main>
         <footer>
-            tecnologias que harán trascender tu compañia
+           <strong>tecnologias que harán trascender tu compañia</strong> 
 
         </footer>
 
-    
+
 </body>
+
 </html>
